3823 Update spring boot to 4.0.1, spring ai to 2.0.0-M1, spring cloud to 2025.1.0, spring cloud aws to 4.0.0-M1